# char_pp

./: .env.example  .gitignore  CHANGELOG.md  CODEBUDDY.md  Makefile  alembic.ini  pyproject.toml
.codebuddy/commands/: skill.kb-extraction.md
.codebuddy/rules/: api.md  code-style.md  cos-storage.md  database.md  file-organization.md  tech-classification.md  workflow.md
.specify/: integration.json
.specify/integrations/: codebuddy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
config/: athlete_directory_map.json  coach_directory_map.json  optimization_levers.yml  tech_classification_rules.json  tech_classification_rules.json_new  terminology_mapping.json
config/keywords/: tech_hint_keywords.json
docs/: CEO_综合诊断报告_2026-05-19.md  ai-pingpong-coach-business-plan.md  api-standardization-guide.md  architecture.md  business-workflow.md  environment-setup.md  feature-021-proposal.md  features.md  user-research-ai-coach.md
docs/benchmarks/: 002-audio-enhanced-kb.md  README.md  deviation_annotation_v1.json  expert_annotation_v1.json  tech_classification_v2.md
docs/models/: whisper-small-zh.md
pp_book/: pp_tech_classification.csv
scripts/: backfill_curation_for_existing_videos.py  build_knowledge_base.py  install-git-hooks.sh  lint_api_naming.py  lint_error_codes.py  production_e2e_f021.py  run_curation_benchmark.py  staging_acceptance_f021.py
scripts/audit/: .scan-exclude.yml  __init__.py  _spec_sections.py  common.py  spec_compliance.py  workflow_drift.py
scripts/git-hooks/: pre-push
specs/001-video-coaching-advisor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py
tests/: conftest.py
(+604 files in other folders)
