[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "charhuang-pp-cn"
version = "0.1.0"
description = "乒乓球AI智能教练系统 — 后端分析服务"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Async task queue
    "celery[redis]>=5.4.0",
    # Computer vision & pose estimation
    "mediapipe>=0.10.14",
    "opencv-python-headless>=4.9.0.80",
    "ffmpeg-python>=0.2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Tencent Cloud COS SDK
    "cos-python-sdk-v5>=1.9.30",
    # Utilities
    "python-multipart>=0.0.9",
    # Audio analysis (Feature 002)
    "openai-whisper==20231117",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
gpu = [
    "ultralytics>=8.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests",
    "integration: end-to-end pipeline tests (require DB and Redis)",
    "contract: API contract tests (require running FastAPI server)",
    "benchmark: accuracy benchmark tests (require annotation datasets)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
